--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mr. Singh</title>
+    <title>Mr. Singh (mrsingh-it)</title>
 </head>
 <body>
     <h1>Hello, World!</h1>
